fixed issue where navbar went behind cards

--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,12 @@ div.container {
 .sticky {
   position: fixed;
   bottom: 0;
-  z-index: 1;
+  z-index: 2;
   
+}
+
+card {
+  z-index: 1;
 }
 
 nav ul {
